2006-06-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-menu.c: (totem_languages_update),
	(totem_subtitles_update):
	  Pop down language/subtitle menus before replacing them
	  with a different one, otherwise the session might lock
	  up hard if a menu is replaced while being open (#342411).

============ Version 1.5.2

2006-06-12  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 1.5.2
	* NEWS: upd

2006-06-12  Bastien Nocera  <hadess@hadess.net>

	* data/playlist.glade:
	* data/properties.glade:
	* data/screenshot.glade:
	* data/skip_to.glade:
	* data/totem.glade:
	Remove mentions of media-player-48.png, so that we use
	the themed icon
	* src/totem-mozilla-viewer.c: (on_about1_activate):
	* src/totem.c: (on_about1_activate), (main):
	* src/vanity.c: (on_about1_activate), (main):
	use PACKAGE_VERSION instead of VERSION, as PACKAGE_VERSION is meant
	to be a string, unlike VERSION, spotted by Frederic Peters
	(Closes: #344599)

2006-06-07  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_new_hal_ctx),
	(totem_cd_detect_type_with_url): free the device cache when getting
	an error checking for a CDDA (spotted by William Jon McCann
	<mccann@jhu.edu>, unref the D-Bus connection when we get an error
	initialising HAL

2006-06-07  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: Add audio/vnd.rn-realaudio as a
	possible mime-type for Real Audio playlists (Closes: #344020)

2006-06-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_read_entire_file), (totem_pl_parser_add_ram),
	(totem_pl_parser_add_asf_reference_parser),
	(totem_pl_parser_add_asf_parser), (totem_pl_parser_add_pls),
	(totem_pl_parser_add_m3u), (totem_pl_parser_add_asx),
	(totem_pl_parser_add_smil),
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_add_desktop), (totem_pl_parser_add_xspf):
	use totem_pl_parser_read_entire_file to make sure that