@@ -1,3 +1,13 @@
+2006-06-17  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_set_subtitle_encoding):
+	* src/backend/bacon-video-widget-xine.c:
+	(bacon_video_widget_set_subtitle_encoding):
+	* src/backend/bacon-video-widget.h:
+	Patch from Young-Ho Cha <ganadist at chollian net>, to allow
+	changing the default encoding for text subtitles
+
 2006-06-13  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/totem-menu.c: (totem_languages_update),
